--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Images/vivekphoto.jpg" alt="Vivek's picture" width="200" height="200"></td>
+      <td><img src="vivekphoto.jpg" alt="Vivek's picture" width="200" height="200"></td>
       <td><h1>Vivek Roushan</h1>
       <p><em>I am <strong><a href="https://www.appbrewery.co/">programmer</a></strong></em></p>
       <p>I am student of UITBU(2020-2024) batch in Information Technology.Currently,
