--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <tr>
       <td><img src="vivekphoto.jpg" alt="Vivek's picture" width="200" height="200"></td>
       <td><h1>Vivek Roushan</h1>
-      <p><em>I am <strong><a href="https://www.appbrewery.co/">programmer</a></strong></em></p>
+      <p><em>I am <strong><a href="https://www.codechef.com/">programmer</a></strong></em></p>
       <p>I am student of UITBU(2020-2024) batch in Information Technology.Currently,
         i am in 2nd year.</p></td>
     </tr>
@@ -19,18 +19,17 @@
   <hr>
   <h3>Education</h3>
   <ul>
-    <li><a href="https://www.codechef.com/">Matriculation</a></li>
+    <li><a href="https://www.lbpsaurangabad.in/">Matriculation</a></li>
     <ul>
       <li>9.8 CGPA</li>
     </ul>
-    <li><a href="https://in.linkedin.com/company/codechef">Intermediate</a></li>
+    <li><a href="https://bssnintercollege.in/contact.php">Intermediate</a></li>
     <ul>
       <li>71%</li>
     </ul>
   </ul>
     <hr>
   <h3>Work Experince</h3>
-  <p>2010-2020</p>
   </p>
   <table border="1">
     <thead>
@@ -41,12 +40,12 @@
     </thead>
     <tbody>
       <tr>
-        <td>2010-2013</td>
-        <td>Lead Developer at Tempo App</td>
+        <td>2017-2019</td>
+        <td>Intermediate</td>
       </tr>
       <tr>
-        <td>2010</td>
-        <td>Researcher</td>
+        <td>2020-2024</td>
+        <td>Graduation</td>
       </tr>
     </tbody>
   </table>
@@ -76,15 +75,15 @@
         <table border="1">
           <tbody>
             <tr>
-              <td>C language </td>
+              <td>Web Development</td>
               <td>🌟🌟🌟🌟🌟</td>
             </tr>
             <tr>
-              <td>C++ language </td>
+              <td>Android Development</td>
               <td>🌟🌟🌟🌟🌟</td>
             </tr>
             <tr>
-              <td>Python language </td>
+              <td>Java language </td>
               <td>🌟🌟🌟</td>
             </tr>
           </tbody>
