--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
 <head>
   <meta charset="utf-8">
   <title>Vivek Roushan</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Montserrat:ital,wght@1,900&family=Sacramento&display=swap" rel="stylesheet">
   <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="cloud.png" alt="cloud-img">
     <div class="title-text">
       <h1>I'm Vivek Roushan.</h1>
       <h2>a <span class="pro">pro</span>grammer.</h2>
     </div>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img class="mountain" src="images/mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+    <img class="mountain" src="mountain.png" alt="mountain-img">
   </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img class="round" src="images/vivekphoto.jpg" alt="vivekphoto-profile-img">
+      <img class="round" src="vivekphoto.jpg" alt="vivekphoto-profile-img">
       <h2>Hello.</h2>
       <p class="intro">I am an Android and Web Developer. I'm pursuing my BE in Information Technology. I ❤️ watching movies.</p>
     </div>
@@ -30,7 +30,7 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="design-img" src="images/design.png" alt="Design and Development-img">
+        <img class="design-img" src="design.png" alt="Design and Development-img">
 
         <h3>Design & Development</h3>
         <p class="cl">I started learning to code when I was in first year(2020) of my college because I wanted to persue my career as Software Engineer. Over time, I have gained a wealth of experience in design and developing mobile applications and
@@ -38,7 +38,7 @@
 
       </div>
       <div class="skill-row">
-        <img class="hack-img" src="images/hack.png" alt="Hackathon-img">
+        <img class="hack-img" src="hack.png" alt="Hackathon-img">
 
         <h3>Hackathon on Web Development • Code Innovation Series organized by Github and IncubateIND</h3>
         <p class="cll">In this, we had made an educational site on which any teacher could create his account and teach on it and any
